[package]
name = "tracer"
version = "0.1.0"
license = "MIT"
repository = "https://github.com/dbstratta/tracer"
authors = ["Diego Stratta <dbstratta@gmail.com>"]
readme = "README.md"
edition = "2018"
keywords = ["ray", "path", "tracing"]

[dependencies]
image = "0.23.13"
rand = "0.8.3"
rayon = "1.5.0"